<resources>
    <string name="app_name" translatable="false">LockScreenMessage</string>
    <string name="action_settings">Settings</string>
    <string name="developer_capslock">DEVELOPER</string>
    <string name="licences_capslock">LICENCES</string>
    <string name="licences">Licenses</string>
    <string name="app_version" translatable="false">Version 1.0.0</string>
    <string name="info">The app LockScreenMessage lets you show any message you like permanently on your lock screen.</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="service_channel_id" translatable="false">serviceChannel</string>
    <string name="lock_screen_channel_id" translatable="false">lockScreenChannel</string>
    <string name="lock_screen_message_title" translatable="false">lockScreenMessageTitle</string>
    <string name="lock_screen_message_content" translatable="false">lockScreenMessageContent</string>
    <string name="lock_screen_message_id" translatable="false">lockScreenMessageId</string>
    <string name="about">About</string>
    <string name="ok">Ok</string>
    <string name="show_message">Show Message</string>
    <string name="text_saved_hint">A text for the lock screen message must have been saved.</string>
    <string name="message_saved">Message saved.</string>
    <string name="service_channel_name" translatable="false">Service</string>
    <string name="service_message_content">This notification is necessary. Hide it by long pressing and disabling the service channel.</string>
    <string name="service_channel_description">This channel is necessary for the service to work. You can still hide its notifications.</string>
    <string name="lock_screen_message_channel_name">Persistent lock screen message</string>
    <string name="lock_screen_message_channel_description">This channel is necessary for displaying the lock screen message. You should not hide its notifications.</string>
    <string name="instruction">Here you can set the message you want to be shown on your lock screen. A good idea would be to enter information about the owner of this device.</string>
    <string name="switch_hint">It can take a moment for the service to start.</string>
    <string name="lock_screen_message_enabled" translatable="false">lockScreenMessageEnabled</string>
    <string name="auto_start_hint">"For some devices it is necessary to manually activate auto start for this app in order to let it show your lock screen message automatically after boot. You can do this in the device settings. Unfortunately, on some devices showing the message after boot might not work at all.\n\nFurthermore, in the settings of the lock screen message notification channel, it should be selected that the message is displayed even during Do Not Disturb mode."</string>
    <string name="first_message_activation" translatable="false">firstMessageActivation</string>
</resources>