<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="225dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:elevation="10dp"
            android:scaleType="center"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/textView"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/app_version"
            android:textSize="11sp"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/info"
            android:textAlignment="center"
            android:textSize="15sp"
            />

        <com.google.android.material.button.MaterialButton
            android:text="@string/developer"
            android:id="@+id/developer"
            android:layout_marginTop="-4dp"
            android:layout_gravity="center"
            android:layout_height="40dp"
            android:layout_width="200dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            />

        <com.google.android.material.button.MaterialButton
            android:text="@string/licences"
            android:id="@+id/licences"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center"
            android:layout_height="40dp"
            android:layout_width="200dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>